# axum/src/api/routes/s3_routes.rs
@@ -11,5 +11,9 @@ pub fn s3_routes() -> Router<AppState> {
         .route("/complete", post(files::complete_multipart_upload))
         .route("/abort", post(files::abort_multipart_upload))
         .route("/presigned/{encoded_key}", get(files::fetch_presigned_url))
+        .route(
+            "/presigned/batch/{task_id}",
+            post(files::fetch_presigned_urls_batch),
+        )
         .route("/{file_id}", delete(files::delete_file))
 }
